# project2_skypro

./: .coverage  README.md  pyproject.toml
src/: JsonSaver.py  api_base.py  base_class.py  hh.py  json_base_class.py  main.py  utils.py  vacancies.json  vacancies.py
tests/: conftest.py  test_hh.py  test_jsonsaver.py  test_utils.py  test_vacancies.py
